force-app/main/default/objects/Import__c/fields/quantitePorteEntree__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteEntree__c</fullName>
    <label>Quantité porte d&apos;entrée</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>