force-app/main/default/objects/Import__c/fields/quantitePorteFenetre__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteFenetre__c</fullName>
    <label>Quantité porte fenêtre</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>