force-app/main/default/objects/Import__c/fields/quantitePorteGarage__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteGarage__c</fullName>
    <label>Quantité porte de garage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>