force-app/main/default/objects/Import__c/fields/quantitePorteInterieur__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteInterieur__c</fullName>
    <label>Quantité porte d&apos;intérieur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>