force-app/main/default/objects/Import__c/fields/quantitePorteService__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteService__c</fullName>
    <label>Quantité porte de service</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>