force-app/main/default/objects/Import__c/fields/quantiteStoreBanne__c.field-meta.xml
<CustomField>
    <fullName>quantiteStoreBanne__c</fullName>
    <label>Quantité store banne</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>