force-app/main/default/objects/Import__c/fields/quantiteVoletBattant__c.field-meta.xml
<CustomField>
    <fullName>quantiteVoletBattant__c</fullName>
    <label>Quantité volet battant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>