force-app/main/default/objects/Import__c/fields/quantiteVoletRoulant__c.field-meta.xml
<CustomField>
    <fullName>quantiteVoletRoulant__c</fullName>
    <label>Quantité volet roulant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>