force-app/main/default/objects/Import__c/fields/RDVExistant__c.field-meta.xml
<CustomField>
    <fullName>RDVExistant__c</fullName>
    <formula>!ISBLANK(dateRDV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rendez-vous existant</label>
    <type>Checkbox</type>
</CustomField>