force-app/main/default/objects/Import__c/fields/recommendedSeller__c.field-meta.xml
<CustomField>
    <fullName>recommendedSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendeur recommandé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>imports</relationshipName>
    <type>Lookup</type>
</CustomField>