force-app/main/default/objects/Import__c/fields/rueChantier__c.field-meta.xml
<CustomField>
    <fullName>rueChantier__c</fullName>
    <label>Rue (Chantier)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>