force-app/main/default/objects/Import__c/fields/rueCompte__c.field-meta.xml
<CustomField>
    <fullName>rueCompte__c</fullName>
    <label>Rue (Compte)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>