force-app/main/default/objects/Import__c/fields/scoreGeocodage__c.field-meta.xml
<CustomField>
    <fullName>scoreGeocodage__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Score du géocodage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>