force-app/main/default/objects/Import__c/fields/segmentation__c.field-meta.xml
<CustomField>
    <fullName>segmentation__c</fullName>
    <label>Segmentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>