force-app/main/default/objects/Import__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>Pour la foire de Paris =&gt; Obligatoire et valeur par défaut &apos;FOIRE&apos;. Par contre a un impact sur les formulaires qui n&apos;alimentent pas ce champ et donc qui déclenchent la règle de validation Obligatoire.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAL VENDEUR</fullName>
            </value>
            <value>
                <fullName>CAMPAGNES MARKETING</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>COLLABORATEUR+RETRAIT S-GOBAIN</fullName>
            </value>
            <value>
                <fullName>COLLABORATEUR K PAR K</fullName>
            </value>
            <value>
                <fullName>COMPLEMENT VENDEUR</fullName>
            </value>
            <value>
                <fullName>FOIRE</fullName>
            </value>
            <value>
                <fullName>JPO</fullName>
            </value>
            <value>
                <fullName>PARRAINAGE VENDEUR</fullName>
            </value>
            <value>
                <fullName>PASSAGE MAGASIN</fullName>
            </value>
            <value>
                <fullName>PORTE A PORTE VENDEUR</fullName>
            </value>
            <value>
                <fullName>PRESCRIPTION</fullName>
            </value>
            <value>
                <fullName>STAND GM</fullName>
            </value>
            <value>
                <fullName>STAND MARCHE VENDEUR</fullName>
            </value>
            <value>
                <fullName>TELEPHONE VENDEUR</fullName>
            </value>
            <value>
                <fullName>TELEPRO MAGASIN</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>WEB CONFIGURATEUR</fullName>
            </value>
            <value>
                <fullName>PROSPECTION FLASH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>