force-app/main/default/objects/Import__c/fields/sourceIntegration__c.field-meta.xml
<CustomField>
    <fullName>sourceIntegration__c</fullName>
    <label>Source intégration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>