force-app/main/default/objects/Import__c/fields/sourceWeb__c.field-meta.xml
<CustomField>
    <fullName>sourceWeb__c</fullName>
    <description>CRM-780 : récupération de la source web du client par demande de devis.</description>
    <label>Source Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>