force-app/main/default/objects/Import__c/fields/statusSummary__c.field-meta.xml
<CustomField>
    <fullName>statusSummary__c</fullName>
    <formula>IF(ISNULL(dateIntegration__c), &apos;Non intégré&apos;, &apos;Intégré le &apos; + TEXT(dateIntegration__c)) 
+ &apos; / &apos; +  TEXT(DATEVALUE(CreatedDate)) + &apos; (&apos; + TEXT(FLOOR((TODAY() - DATEVALUE(CreatedDate))/365)) + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Statut)</label>
    <type>Text</type>
</CustomField>