force-app/main/default/objects/Import__c/fields/telephoneDomicileCompte__c.field-meta.xml
<CustomField>
    <fullName>telephoneDomicileCompte__c</fullName>
    <label>Téléphone domicile (Compte)</label>
    <type>Phone</type>
</CustomField>