force-app/main/default/objects/Import__c/fields/telephoneMobileCompte__c.field-meta.xml
<CustomField>
    <fullName>telephoneMobileCompte__c</fullName>
    <label>Téléphone mobile (Compte)</label>
    <type>Phone</type>
</CustomField>