force-app/main/default/objects/Import__c/fields/telephoneProfessionnelCompte__c.field-meta.xml
<CustomField>
    <fullName>telephoneProfessionnelCompte__c</fullName>
    <label>Téléphone professionnel (Compte)</label>
    <type>Phone</type>
</CustomField>