force-app/main/default/objects/Import__c/fields/typeDotation__c.field-meta.xml
<CustomField>
    <fullName>typeDotation__c</fullName>
    <description>Type de dotation pour un filleul</description>
    <label>Type de dotation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carte cadeaux</fullName>
            </value>
            <value>
                <fullName>Chèque cadeaux électronique</fullName>
                <default>true</default>
                <label>Chèque cadeaux électronique</label>
            </value>
            <value>
                <fullName>Chèque cadeaux papier envoyé en recommandé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>