force-app/main/default/objects/Import__c/fields/typeFichierSource__c.field-meta.xml
<CustomField>
    <fullName>typeFichierSource__c</fullName>
    <label>Type de fichier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>