force-app/main/default/objects/Import__c/fields/typeGeocodage__c.field-meta.xml
<CustomField>
    <fullName>typeGeocodage__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Type de géocodage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>