force-app/main/default/objects/Import__c/fields/typeHabitation__c.field-meta.xml
<CustomField>
    <fullName>typeHabitation__c</fullName>
    <label>Type d&apos;habitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pavillon</fullName>
            </value>
            <value>
                <fullName>Appartement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>