force-app/main/default/objects/Import__c/fields/versioningChantier__c.field-meta.xml
<CustomField>
    <fullName>versioningChantier__c</fullName>
    <label>Versioning chantier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>