force-app/main/default/objects/Import__c/fields/versioningCompte__c.field-meta.xml
<CustomField>
    <fullName>versioningCompte__c</fullName>
    <label>Versioning compte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>