force-app/main/default/objects/Import__c/fields/versioningProjet__c.field-meta.xml
<CustomField>
    <fullName>versioningProjet__c</fullName>
    <label>Versioning projet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>