force-app/main/default/objects/Import__c/fields/versioningRDV__c.field-meta.xml
<CustomField>
    <fullName>versioningRDV__c</fullName>
    <label>Versioning RDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>