force-app/main/default/objects/Import__c/fields/villeChantier__c.field-meta.xml
<CustomField>
    <fullName>villeChantier__c</fullName>
    <label>Ville (Chantier)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>