force-app/main/default/objects/Import__c/fields/villeCompte__c.field-meta.xml
<CustomField>
    <fullName>villeCompte__c</fullName>
    <label>Ville (Compte)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>