force-app/main/default/objects/Import__c/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Y</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>