force-app/main/default/objects/Import__c/recordTypes/ficheContact.recordType-meta.xml
<RecordType>
    <fullName>ficheContact</fullName>
    <active>true</active>
    <description>Fiche de contact renseignée par le réseau commercial</description>
    <label>Fiche de contact</label>
</RecordType>