force-app/main/default/objects/Import__c/recordTypes/importExterne.recordType-meta.xml
<RecordType>
    <fullName>importExterne</fullName>
    <active>true</active>
    <description>Fichier acheté ou loué, site WEB, etc...</description>
    <label>Import externe</label>
</RecordType>