force-app/main/default/objects/Import__c/validationRules/VR001_K2_Import_NomFichierSource.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Import_NomFichierSource</fullName>
    <active>true</active>
    <description>Nom du fichier source obligatoire lorsqu&apos;il s&apos;agit d&apos;une fiche contact externe</description>
    <errorConditionFormula>AND( 
  $User.ByPassValidationRule__c = false, 
  RecordType.DeveloperName = &apos;importExterne&apos;,
  ISNULL(nomFichierSource__c)
)</errorConditionFormula>
    <errorDisplayField>nomFichierSource__c</errorDisplayField>
    <errorMessage>Nom du fichier source obligatoire!</errorMessage>
</ValidationRule>