force-app/main/default/objects/Import__c/validationRules/VR001_K2_Import_QtePorteGarage.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Import_QtePorteGarage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ByPassValidationRule__c = false,
quantitePorteGarage__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>quantitePorteGarage__c</errorDisplayField>
    <errorMessage>Quantité invalide (doit être supérieure ou égale à 0)!</errorMessage>
</ValidationRule>