force-app/main/default/objects/Import__c/validationRules/VR001_K2_Import_QteVoletRoulant.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Import_QteVoletRoulant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ByPassValidationRule__c = false,
quantiteVoletRoulant__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>quantiteVoletRoulant__c</errorDisplayField>
    <errorMessage>Quantité invalide (doit être supérieure ou égale à 0)!</errorMessage>
</ValidationRule>