force-app/main/default/objects/Import__c/validationRules/VR_K3_Import_OrigineCCM.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Import_OrigineCCM</fullName>
    <active>true</active>
    <description>12/01/2024 FGO: Suite détournement d&apos;origine CCM pour bénéficier abusivement de promotions</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISCHANGED(source__c) &amp;&amp;
OR(ISPICKVAL(PRIORVALUE(source__c), &apos;CCM&apos;),
   ISPICKVAL(source__c, &apos;CCM&apos;))</errorConditionFormula>
    <errorDisplayField>source__c</errorDisplayField>
    <errorMessage>Origine CCM non modifiable!</errorMessage>
</ValidationRule>