force-app/main/default/objects/Import__c/validationRules/VR_K3_Import_OrigineCCM2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Import_OrigineCCM2</fullName>
    <active>true</active>
    <description>12/01/2024 FGO: Suite détournement d&apos;origine CCM pour bénéficier abusivement de promotions</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(ISNEW() || ISCHANGED(source__c) || ISCHANGED(callSource__c)) &amp;&amp;
ISPICKVAL(source__c, &apos;CCM&apos;) &amp;&amp;
ISPICKVAL(callSource__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>source__c</errorDisplayField>
    <errorMessage>Origine call obligatoire lorsque l&apos;origine du compte est &apos;CCM&apos;!</errorMessage>
</ValidationRule>