force-app/main/default/objects/Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nomCompte__c</columns>
    <columns>prenomCompte__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/28/2022 12:00 AM</value>
    </filters>
    <label>Tout</label>
</ListView>