force-app/main/default/objects/Import__c/listViews/Parrain_GUILCHER.listView-meta.xml
<ListView>
    <fullName>Parrain_GUILCHER</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>numeroParrain__c</columns>
    <columns>compte__c</columns>
    <columns>chantier__c</columns>
    <columns>projet__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>dateIntegration__c</columns>
    <columns>sourceIntegration__c</columns>
    <columns>classeException__c</columns>
    <columns>messageException__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nomCompte__c</field>
        <operation>equals</operation>
        <value>poulet</value>
    </filters>
    <filters>
        <field>nomCompte__c</field>
        <operation>equals</operation>
        <value>tyran</value>
    </filters>
    <filters>
        <field>nomCompte__c</field>
        <operation>equals</operation>
        <value>madie</value>
    </filters>
    <label>Parrain GUILCHER</label>
    <language>fr</language>
    <sharedTo>
        <group>Support185343</group>
    </sharedTo>
</ListView>