force-app/main/default/objects/Import__c/listViews/testsupport.listView-meta.xml
<ListView>
    <fullName>testsupport</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>dateIntegration__c</columns>
    <columns>messageException__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>idInterneFournisseurFichierSource__c</columns>
    <columns>emailCompte__c</columns>
    <columns>nomCompte__c</columns>
    <columns>codePostalCompte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/15/2015 12:00 AM</value>
    </filters>
    <label>TEST SUPPORT</label>
    <language>fr</language>
    <sharedTo>
        <role>Supportutilisateur</role>
    </sharedTo>
</ListView>